--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -332,11 +332,6 @@ C'est le « nombre de Reynolds » (Re) qui permet de distinguer si un écoulemen
   \boxed{\displaystyle{Re = \frac{V \times L}{\nu}}}
 \end{center}
 Où V est la vitesse du fluide (en m/s), $L$ sa viscosité cinématique (en $m^2/s$) et $\nu$ la dimension caractéristique (en m).
-
-\begin{center}
-  \boxed{\displaystyle{\nu = \frac{\mu}{p}}}
-\end{center}
-Où $p$ est la masse volumique du fluide (en $kg/m^3$), $\mu$ sa viscosité dynamique (en Pa.s).
 \medbreak
 Si Re est compris entre 500 et 2000, l’écoulement est laminaire.
 Les glaciers, de part leur forte viscosité, réalisent un écoulement laminaire.
@@ -395,14 +390,16 @@ Où $v$ représente la vitesse de sédimentation, $\mu$ la viscosité du fluide,
 
 Imaginée par Wagner au $19$ siècle, redécouverte dans les années 50 pour n'être qu'unanimement acceptée dix ans plus tard, la théorie des plaques signe le véritable commencement de la géologie en tant que science, changeant totalement notre vision de la terre et de ses cycles. \\
 La tectonique des plaques propose que l'écorce terrestre soit formée de plaques qui se déplaceraient les unes par rapport aux autres à la faveur des mouvements internes du manteau terrestre. Ce même manteau qui, encore de nos jours, reste bien mystérieux (notamment en ce qui concerne les points chauds). \\
-La mécanique de la terre, qui est à la source de tous les effets géomorphologiques visibles, est en fait le résultat d'un long refroidissement qui commença il y a 4,6 milliards d'années et qui se poursuit encore aujourd'hui.
+La mécanique de la terre, qui est à la source de tous les effets géomorphologiques visibles, est en fait le résultat d'un long refroidissement qui commença il y a 4,6 milliards d'années et qui se poursuit encore aujourd'hui.\\
 Cette mécanique de refroidissement met en place d'autres mécanismes comme ceux de la fermeture et de l'ouverture des océans, causes majeures de la plupart des mouvements à la surface de la terre.
 
 \subsection{La subduction}
 
-La subduction désigne la plongée d'une plaque sous une autre (voir figure ci-dessous). Ces plaques sont dites lithosphériques (car possédant une lithosphère, pour simplifier, une partie solide séparée de l'asthénosphère par le moho). Elles sont portées par l'asthénosphère, la partie « manteau » des plaques.
-Une subduction survient généralement quand une plaque océanique vieillissante plonge sous un continent. En fonction de l'angle d'incidence et de la vitesse de la plaque plongeante, différent types de phénomènes orogéniques sont visibles à la surface. Par exemple, des séismes fréquents qui créent une chaîne de montagne.
-De nos jours, ce phénomène se manifeste encore à grande ampleur dans les Andes, et des traces de subductions se trouvent aux quatre coins du globe, de l'Inde au Japon en passant par les Alpes. \\
+La subduction désigne la plongée d'une plaque sous une autre (voir figure ci-dessous). Ces plaques sont dites lithosphériques (car possédant une lithosphère, pour simplifier, une partie solide séparée de l'asthénosphère par le moho). Elles sont portées par l'asthénosphère, la partie « manteau » des plaques.\\
+Une subduction survient généralement quand une plaque océanique vieillissante plonge sous un continent. 
+En fonction de l'angle d'incidence et de la vitesse de la plaque plongeante, différent types de phénomènes orogéniques sont visibles à la surface. \\
+Par exemple, des séismes fréquents qui créent une chaîne de montagne.\\
+De nos jours, ce phénomène se manifeste encore à grande ampleur dans les Andes, et on trouve des traces de subductions aux quatre coins du globe, de l'Inde au Japon en passant par les Alpes. \\
 
 \begin{center}
   \includegraphics[width=8cm]{Images/subduction_2.png}
@@ -411,53 +408,53 @@ De nos jours, ce phénomène se manifeste encore à grande ampleur dans les Ande
 
 \subsubsection{L'histoire de la chaîne alpine}
 
-Le début de l'histoire de la chaîne alpine commence peu après -256 Ma. À cette époque, le paléoocéan Thétys occupait la majorité de la surface terrestre.
+Le début de l'histoire de la chaîne alpine commence peu après -256 Ma. À cette époque, le paléoocéan Thétys (aussi appelé océan alpin) occupait la majorité de la surface terrestre.
 Les contraintes du manteau terrestre amorcèrent alors le soulèvement d'une zone de la plaque alpine, préfigurant une dorsale océanique.
 \begin{itemize}
   \item - 200 Ma, trias~: ouverture de l'océan alpin.\\
   La dorsale est pleinement ouverte et déverse son  magma dans l'océan alpin, ce qui a pour effet de l'élargir.
-  A son apogée, l'océan Alpin fut large de 300 à 1000 km, et profond de 3500 à 4000 m ;
+  A son apogée, l'océan alpin fut large de 300 à 1000 km, et profond de 3500 à 4000 m ;
   \item - 140 Ma, crétacé inférieur~: début de la compression de l'océan alpin suite à des contraintes externes telles que le rapprochement de la plaque Africaine ;
   \item Fin du crétacé inférieur, subduction du coté de la plaque africaine ;
   \item Nouvelle océanisation dans « la zone valaisaine » (nouvelle dorsale typique des océans en fin de vie) ;
-  \item Crétacé supérieur~: fin de l'océan alpin, qui est considérablement réduit, et commencement de la mer alpine, reliée à l'océan atlantique en formation. L'océan valaisin est, pour sa part, totalement refermé ;
-  \item -65 Ma, paléocène~: Sous l'effet des contraintes, émersion de la plate-forme continentale au delà de la « zone valaisaine ».
-  Début de la formation des alpes avec la poursuite de la compression.
+  \item Crétacé supérieur~: fin de l'océan alpin, qui est considérablement réduit, et commencement de la mer alpine, reliée à l'océan atlantique en formation. L'océan valaisan est, pour sa part, totalement refermé ;
+  \item -65 Ma, paléocène~: sous l'effet des contraintes, émersion de la plate-forme continentale au delà de la « zone valaisaine ».\\
+  Début de la formation des alpes avec la poursuite de la compression.\\
   La zone du massif du mont blanc passe sous la zone d'obduction majoritaire pour ressurgir plus tard à sa place actuelle ;
-  \item Oligocène~: Écaillage important des couches ;
+  \item Oligocène~: écaillage important des couches ;
   \item - 23 Ma~: néogène, création du jura au devant des alpes par effet collatéral de compression ;
   Soulèvement du massif du Mt Blanc, ce qui pousse la partie calcaire des Alpes à glisser par gravité ;
   \item Pliocène~: séparation de la partie calcaire des alpes et pré-alpes (Jura, Chartreuse, Vercors) du reste, désormais essentiellement granitique). Cette séparation se produit par glissement de la partie supérieur calcaire qui s'éloigne de la zone de surrection du Mont blanc.
   C'est à ce moment qu'est atteint le pic d'intensité dans la formation des alpes.
 \end{itemize}
-Plus récemment, dans les dernières centaine de milliers d'années, les nombreuses ères glacières successives ont totalement refaçonnées le massif des alpes, et c'est cette époque qui reste malgré son âge assez faible la plus décisive dans le façonnage des massifs alpins.
+Plus récemment, dans ces dernières centaines de milliers d'années, les nombreuses ères glacières successives ont totalement refaçonnées le massif des Alpes ; et c'est cette époque qui reste, malgré son âge assez faible, la plus décisive dans le façonnage des massifs alpins.\\
   Le glacier du Rhône tout particulièrement, assez titanesque, a creusé un immense sillon qui laissera place notamment au Lac Léman. 
 
 \subsection{Dynamique des roches}
 	
-Les physiciens ont grandement fait avancer la géologie modernes grâce aux roches, car la connaissance de la dynamique des roches face à un contexte donné éclaire sur la formation et l'évolution des grands systèmes orogéniques comme des déformations à petite échelle.
-En effet, les roches, bien qu'usuellement cassantes et rigides, peuvent devenir plus ductiles sous certaines conditions. \\
+Les physiciens ont grandement fait avancer la géologie modernes grâce à l'étude des roches. En effet, la connaissance de la dynamique des roches face à un contexte donné éclaire sur la formation et l'évolution des grands systèmes orogéniques comme les déformations à petite échelle.\\
 
 \subsubsection{Le temps}
 
 Le temps est l'élément fondamental de la géologie car même les roches les plus dures se déformeront comme de la pâte à modeler si elles sont soumises à une force puissante dans le même sens pendant plusieurs dizaines de milliers d'années. C'est d'ailleurs pour cela qu'on utilise de la pâte à modeler dans les modélisations géologiques à petite échelle.
 En effet, sur les échelles immenses qui sont celles des temps géologiques, n'importe quel matériau se comportera comme s'il était mou.\\
 Par exemple, une montagne, sous certaines conditions, peut se transformer en colline en seulement quelques millions d'années.
-Autre exemple, la « mort des océans », dûe à la lithosphère océanique qui, étant plus dense que la croûte continentale, se refroidit et s'alourdit lentement au fil des millénaires.
-Il c'est avéré qu'à cause de ce principe, la durée de vie des océans est limitée à environ 270 millions d'années.
-Les océans suivent donc un cycle de naissance, vie et de mort qui est directement à la source de la plupart des mécanismes orogéniques.
+Autre exemple, la « mort des océans » qui est due à la lithosphère océanique qui, étant plus dense que la croûte continentale, se refroidit et s'alourdit lentement au fil des millénaires.
+Il est avéré qu'à cause de ce principe, la durée de vie des océans est limitée à environ 270 millions d'années.
+Les océans suivent donc un cycle de naissance, vie et mort qui est directement à la source de la plupart des mécanismes orogéniques.
 
 \subsubsection{La température}
 
 Plus la température est élevée, plus une roche est fluide.
-C'est le cas pour toutes les roches ; ainsi, l'aspect « pâte à modeler » des roches est accentué en profondeur par la chaleur qui les rend plus malléables.
-Cela se ressent sur les séismes~: il existe une limite assez floue mais bien réelle qui sépare les séismes cassants, qui se déplacent brusquement à intervalle régulier, des séismes coulissant, où les roches supportent leur déformation progressive en coulissant entre elles comme des fluides très visqueux.
+C'est le cas pour toutes les roches ; ainsi, l'aspect « pâte à modeler » des roches est accentué en profondeur par la chaleur, qui les rend plus malléables.
+Ainsi, il existe une limite assez floue mais bien réelle qui sépare les failles cassantes (qui se déplacent brusquement à intervalle régulier) des failles coulissantes où les roches supportent leur déformation progressive en coulissant entre elles comme des fluides très visqueux.\\
+Les séismes se produiront plus souvent sur une faille « cassante » que sur une faille « coulissante ».
 
 \subsubsection{La pression}
 
-La pression est facteur auquel nous pensons rarement en premier mais qui est en réalité tout aussi important que les autres.
-En effet, la pression des grandes profondeurs empêche les roches de devenir liquides trop rapidement au fur et à mesure qu'elles s'enfoncent.
-A l'inverse, une brusque remontée de roche depuis les profondeurs, comme c'est le cas avec les volcans, les font fondre et augmentent plus encore la pression qu'elles exerçaient sur le « toit ».
+La pression est un facteur auquel nous pensons rarement en premier mais qui est en réalité tout aussi important que les autres.
+En effet, la pression des grandes profondeurs empêche les roches de devenir liquide trop rapidement au fur et à mesure qu'elles s'enfoncent.\\
+A l'inverse, une brusque remontée de roche depuis les profondeurs, comme c'est le cas avec les volcans, les font fondre et augmentent plus encore la pression qu'elles exercent sur le « toit » du volcan.
 C'est ce qui explique que le magma des volcans remonte jusqu'à une certaine hauteur, s'infiltrant par les failles, puis que c'est alors au tour du gaz de fournir la pression nécessaire à l'expulsion du magma.
 
 \section{La simulation}
@@ -465,19 +462,19 @@ C'est ce qui explique que le magma des volcans remonte jusqu'à une certaine hau
 \subsection{Modéliser un paysage géologique}
 
 Il y a beaucoup de moyens de simuler certains comportements dynamiques en géologie.
-La plupart font appel à une expérience physique mais quelques uns, plus ou moins récentes, font exclusivement usage du numérique.
-Pour rester cohérents avec notre problématique et notre objectif, nous avons choisi cette seconde voie.
+La plupart font appel à une expérience physique mais quelques uns, plus ou moins récentes, font exclusivement usage du numérique.\\
+Pour rester cohérents avec notre problématique et notre objectif, nous avons choisi cette seconde voie. Nous avons toutefois décidé de vous exposer le fonctionnement des simulations physiques, car les simulations numérique se basent souvent sur celles-ci.
 
 \subsubsection{Les simulations physiques}
 
 \paragraph{Simulation par pâtes}
 \medbreak
-Il est fréquent chez les chercheurs géologues de remplacer les couches par divers ingrédients plus ou moins courants~: de la pâte à modeler, du sable mélangé avec de l'huile ou tout autre pâte ductile colorée.
+Il est fréquent chez les chercheurs géologues de remplacer les couches par divers ingrédients plus ou moins courants~: de la pâte à modeler, du sable mélangé avec de l'huile, ou tout autre pâte ductile colorée.
 Ces différentes couches sont soigneusement empilées et leurs propriétés sont choisies avec soin de sorte à faire l'analogie avec les couches géologiques d'un paysage réel.
-Ces simulations, bien que limitées, arrivent à représenter des contraintes de déformation très précises, pour avoir un aperçu visuel d'une démonstration en géologie (ex~: tectonique des plaques, démonstration par l'expérience de l'existence de certains types de plissements) ou pour démontrer l'existence de certains comportements et propriétés dans un système géologiques.
-La plupart de ces simulations sont utilisées, encore aujourd'hui (par souci de rapidité et de réalisme), et modélisent des phénomènes très précis en utilisant des propriétés physiques.
+Ces simulations, bien que limitées, arrivent à représenter des contraintes de déformation très précises, pour avoir un aperçu visuel d'une démonstration en géologie (ex~: tectonique des plaques, démonstration de l'existence de certains types de plissements) ou pour démontrer l'existence de certains comportements et propriétés dans un système géologiques.\\
+La plupart de ces simulations sont encore utilisées aujourd'hui (par souci de rapidité), et modélisent des phénomènes très précis en utilisant des propriétés physiques.\\
 La collision de la plaque indienne avec la plaque euro-asiatique a ainsi reçu une illustration réaliste grâce à un pressoir en métal (représentant l'inde) s'enfonçant dans de la pâte à modeler (représentant l'Asie).
-D'autres simulations du même genre mettent en valeur certains types de plis, plis couchés, plis droits et autre. Cependant, ces différentes simulations, bien que très parlantes, prouvent rarement des conjectures car elles sont difficilement reproductibles et nécessitent surtout beaucoup de suppositions qui détachent leur mises en œuvre de la réalité.
+D'autres simulations du même genre mettent en valeur certains types de plis (plis couchés, plis droits...). Cependant, ces différentes simulations, bien que très parlantes, prouvent rarement des conjectures car elles sont difficilement reproductibles et nécessitent surtout beaucoup de suppositions qui détachent leur mises en œuvre de la réalité.
 
 \begin{center}
   \includegraphics[width=6.2cm]{Images/simulation_physique.png}
@@ -487,17 +484,18 @@ D'autres simulations du même genre mettent en valeur certains types de plis, pl
 
 \paragraph{La place de la physique dans la simulation}
 \medbreak
-Dans ce contexte, la géologie a beaucoup appris de la physique, qui l'a amené à conduire d'autres types d'expériences pour trouver les propriétés de certaines roches soumises à des conditions de pressions et de températures intenses, ou bien pour trouver les réactions chimiques opérant lors de l'érosion de roches calcaires par un milieu riche en $CO_2$.
+Dans ce contexte, la géologie a beaucoup appris de la physique. Celle-ci l'a amené à conduire d'autres types d'expériences pour trouver les propriétés de certaines roches soumises à des conditions de pressions et de températures intenses, ou bien à trouver les réactions chimiques opérant lors de l'érosion de roches calcaires par un milieu riche en $CO_2$.
 
 \subsubsection{La simulation numérique par automate cellulaire}
 
 Nous avons épluchés plusieurs thèses traitant de la simulation de phénomènes géologiques grâce aux ordinateurs.
-Nous n'aurons malheureusement pas trouvé le code source de ces logiciels (ce qui nous aurais permis de les intégrer à notre moteur). De plus, nous avons émis une requête auprès d'un des scientifique ayant basé sa thèse sur une simulation comme la nôtre, mais celui-ci ne nous a pas répondus. \\
-Une thèse en particulier a retenu notre attention : elle portait sur la simulation des mouvements de l’asthénosphère et des systèmes de simulation d'érosion.
+Nous n'aurons malheureusement pas trouvé le code source de ces logiciels (ce qui nous aurais permis de les intégrer à notre simulation, puis de les compléter par nos algorithmes). De plus, nous avons émis une requête auprès d'un des scientifique ayant basé sa thèse sur une simulation comme la nôtre, mais celui-ci ne nous a pas répondu. \\
+Dans toutes nos recherche, une thèse en particulier a retenu notre attention : elle portait sur la simulation des mouvements de l’asthénosphère et des systèmes de simulation d'érosion.\\
 Cette simulation permettait de représenter une subduction grâce à des automates cellulaires.
 Ces automates étaient représentés grâce à un algorithme se réagençant à chaque pas de la simulation.
-C'est notamment de là que nous viens l'idée d'avoir utilisé des cellules indépendantes.
-Cette simulation était assez convaincante visuellement, mais fondamentalement très biaisée car le mouvement des cellules de la première plaque était artificiellement forcé vers le bas pour un meilleur rendu visuel, de sorte que l'apparence primait généralement sur le réalisme physique de la simulation.
+C'est notamment de là que nous vient l'idée d'avoir utilisé des cellules indépendantes.\\
+Cette simulation était assez convaincante visuellement, mais fondamentalement très biaisée car le mouvement des cellules de la première plaque était artificiellement forcé vers le bas pour un meilleur rendu visuel, de sorte que l'apparence primait généralement sur le réalisme physique de la simulation.\\
+C'est pour toutes ces raisons qu'un modèle d'érosion intelligent basé sur un automate cellulaire 3D permettrait de simuler avec une grande précision un paysage de type alpin, tout en économisant beaucoup de mémoire.
 
 \begin{center}
   \includegraphics[width=8cm]{Images/3100_cell.png}
@@ -510,15 +508,13 @@ Cette simulation était assez convaincante visuellement, mais fondamentalement t
 
 \paragraph{Simulation par voxels}
 \medbreak
-La simulation par voxels, particulièrement utile pour l'érosion, consiste à créer un terrain exclusivement composé de « cubes », de points alignés sur un quadrillage en deux ou trois dimensions de coordonnées discrètes.
-Habituellement, les données de traitement numérique de rendu utilisent des points, reliés entre eux par des traits formant des triangles, qui sont ensuite utilisés pour rendre les formes en perspectives. \\
-Les voxels, eux, créent des terrains uniquement composés de cubes, les boxels (voir Glossaire) de sorte qu'ils remplissent l'espace autour d'eux de la largeur d'une unité du système discret.
-Ce système est avantageux quand on regarde le matériel : le processeur d'un ordinateur ayant du mal avec les nombres à virgule, les voxels lui simplifient grandement la tâche.
+La simulation par voxels, particulièrement utile pour l'érosion, consiste à créer un terrain exclusivement composé de « cubes »~: des points alignés sur un quadrillage en deux ou trois dimensions de coordonnées discrètes.\\
+Habituellement, les données de traitement numérique de rendu utilisent des points, reliés entre eux par des traits formant des triangles, qui sont ensuite utilisés pour rendre les formes en perspectives. Les voxels, eux, créent des terrains uniquement composés de cubes, les boxels (voir Glossaire) de sorte qu'ils remplissent l'espace autour d'eux de la largeur d'une unité du système discret.\\
+Ce système est avantageux quand on regarde au niveau du matériel : le processeur d'un ordinateur ayant du mal avec les nombres à virgule, les voxels lui simplifient grandement la tâche.
 En effet, il devient bien plus rapide d'effectuer des opérations simples comme rechercher une cellule adjacente dans le maillage, en supprimer ou encore d'optimiser l'affichage en fonction de la présence ou non de cellules adjacentes.
 De plus, ce système offre l'avantage de permettre de changer assez facilement la résolution des boxels.
 En effet, on peut les simplifier à l'affichage en les rendant plus gros, ce qui allège la tâche de la carte graphique.
-De plus, de la même façon que dans les images en deux dimensions la plus petite unité considérée est le pixel, le boxel est son équivalent en 3D, ce qui implique que les algorithmes de compression classiques des images 2D (type png, jpeg, gif) peuvent s'appliquer sur des portions ou la totalité d'un terrain ainsi généré (moyennant des modifications mineurs), ce qui permet une économie de mémoire énorme.
-C'est pour toutes ces raisons qu'un modèle d'érosion intelligent basé sur un automate cellulaire 3D permettrait de simuler avec une grande précision un paysage de type alpin, tout en économisant beaucoup de mémoire.
+De la même façon que dans les images en deux dimensions la plus petite unité considérée est le pixel, le boxel est a un rôle équivalent mais en 3D, ce qui implique que les algorithmes de compression classiques des images 2D (type png, jpeg, gif) peuvent s'appliquer sur des portions ou la totalité d'un terrain ainsi généré (moyennant des modifications mineures). Ces algorithmes permettraient une économie de mémoire énorme.\\
 
 \subsection{Les Cellules}
 \subsubsection{Définition d'une cellule}
@@ -541,7 +537,7 @@ Si nous prenons toutes les cellules de surfaces et formons des triangles entre e
 
 \subsubsection{Disposition des cellules}
 
-Les cellules étant le plus petit élément composant le terrain, leur organisation importe tout particulièrement au début de la simulation. \\
+La disposition des cellules importe tout particulièrement au début de la simulation. \\
 Plusieurs dispositions ont été essayé avant d'arriver à celle utilisée actuellement.
 Pour simplifier la programmation, les cellules ne sont disposées que sur un plan pour permettre l'utilisation d'un modèle deux dimensions, qui se révèle bien plus simple à écrire et à déboguer. Ainsi, nous gardons des vélocités strictement en deux dimensions. Toutefois, nous utiliserons des vecteurs en trois dimensions (pour permettre une évolution sans avoir à réécrire le code).
 Après avoir choisi un modèle cellulaire planaire, nous devions choisir comment organiser ces cellules les unes par rapport aux autres. \\
@@ -559,9 +555,9 @@ La première disposition choisie fut une grille carré, avec une grille nous fai
 \medbreak
 
 L'avantage de cette méthode était sa simplicité, mais l'inconvénient d'une disposition en grille carré est l'équidistance entre cellules.
-En effet, sur une grille carré les cellules sont à $1$ ou à $\sqrt{2}$ de distance, et comme nous devons toujours prendre le rayon le plus grand, $\sqrt{2}$, cela peut donc induire à des liens en doubles lors d'une compression.
-La deuxième technique proposée fut la disposition en nid-d'abeille ou hexagonale.
-Contrairement à une grille, les cellules sont toutes équidistantes dans une disposition hexagonale, mais leur disposition au début de la simulation nécessite un code légèrement plus complexe.
+En effet, sur une grille carré les cellules sont à $1$ ou à $\sqrt{2}$ de distance, et comme nous devons toujours prendre le rayon le plus grand, $\sqrt{2}$. Cela peut induire à des liens en double lors d'une compression.
+La deuxième technique proposée fut la disposition en nid-d'abeille (ou hexagonale).
+Contrairement à une grille, les cellules sont toutes équidistantes dans une disposition hexagonale. Toutefois, leur disposition au début de la simulation nécessite un code légèrement plus complexe.
 Ce code doit garder une boucle normale pour les abscisses mais doit alterner entre $y_n$ et $y_n - 1$ pour les ordonnées quand $x$ est pair.
 
 \medbreak
@@ -594,7 +590,7 @@ Maintenant que toutes les cellules sont à $1$ de distance entre elles, nous dev
 
 Pour commencer, toute cellule doit connaître toutes ses cellules adjacentes afin de pouvoir interagir avec celles-ci.
 Pour cela nous avons utilisé un arbre KD, qui nous permet d'optimiser la recherche des cellules. En effet, l'arbre KD permet de réaliser une recherche des points inclus dans une sphère plus rapidement qu'une simple recherche linéaire. \\
-Pour ce faire, au début de chaque nouvelle étape compète de simulation, l'arbre KD est détruit puis remplacé par un nouveau vide. Ensuite, nous ajoutons toutes les positions des cellules dans l'ordre (le numéro d'ajout étant le seul moyen de retrouver la cellules par rapport à sa position), puis nous exécutons le tri des positions dans l'arbre KD.
+Pour ce faire, au début de chaque nouvelle étape compète de simulation, l'arbre KD est détruit puis remplacé par un nouveau vide. Ensuite, nous ajoutons toutes les positions des cellules dans l'ordre (le numéro d'ajout étant le seul moyen de retrouver la cellules par rapport à sa position), puis nous exécutons le tri des positions dans l'arbre KD.\\
 Après avoir instancié l'arbre, chaque cellule peut rechercher ses cellules adjacentes dans un rayon égal à la norme d'un vecteur (1~; 1) (la distance originelle entre les cellules) puis enregistrer ces cellules dans une liste utilisée jusqu'à la re-création de l'arbre KD, donc après une itération.
 
 \begin{center}
