Correction de la formule de reynold

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -329,7 +329,7 @@ Un écoulement laminaire peut être qualifié de « tranquille »~: les filets d
 Un écoulement turbulent, pour sa part, voit ses filets d'eau partir dans tous les sens~: le transport est conditionné par les altérites qu'il transporte.
 C'est le « nombre de Reynolds » (Re) qui permet de distinguer si un écoulement est laminaire ou turbulent~:
 \begin{center}
-  \boxed{\displaystyle{Re = \frac{V \times L}{\nu}}}
+  \boxed{\displaystyle{Re = \frac{pVL}{\mu}}}
 \end{center}
 Où V est la vitesse du fluide (en m/s), $L$ sa viscosité cinématique (en $m^2/s$) et $\nu$ la dimension caractéristique (en m).
 \medbreak
