--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -96,7 +96,7 @@ Nous pouvons les séparer en deux parties~:
   \item les facteurs endogènes, qui correspondent à la formation d'un paysage (par exemple, la tectonique des plaques)~;
   \item les facteurs exogènes, qui correspondent à la destruction d'un paysage~: l'érosion\ldots
 \end{itemize}
-L'homme est également considéré comme un facteur géomorphologique, mais il est à la fois endogène et exogène. \\
+L'homme est également considéré comme un facteur géomorphologique, mais il est à la fois endogène et exogène.\\
 
 Quatre étapes principales composent ces processus~:
 \begin{itemize}
@@ -402,7 +402,7 @@ Par exemple, des séismes fréquents qui créent une chaîne de montagne.\\
 De nos jours, ce phénomène se manifeste encore à grande ampleur dans les Andes, et on trouve des traces de subductions aux quatre coins du globe, de l'Inde au Japon en passant par les Alpes. \\
 
 \begin{center}
-  \includegraphics[width=8cm]{Images/subduction_2.png}
+  \includegraphics[width=12cm]{Images/subduction_2.png}
 \end{center}
 \captionof{figure}{Schéma de la subduction entre deux plaques tectoniques.}
 
@@ -480,7 +480,7 @@ D'autres simulations du même genre mettent en valeur certains types de plis (pl
   \includegraphics[width=6.2cm]{Images/simulation_physique.png}
   \includegraphics[width=4cm, angle=90]{Images/inde.jpg}
 \end{center}
-\captionof{figure}{A droite~: Photo de simulation physique par couches de pâtes. A gauche~: Photo de simulation par pâtes des indes.}
+\captionof{figure}{À gauche~: Photo de simulation physique par couches de pâtes. À droite~: Photo de simulation par pâtes des indes.}
 
 \paragraph{La place de la physique dans la simulation}
 \medbreak
