Rajout de ma partie

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -52,6 +52,106 @@
   \end{figure}
 \end{frame}
 
+\section{Les altérations}
+\subsection{Les altérations physiques}
+\begin{frame}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=4.5cm]{Images/Diapos/Alteration/Physique/cryoclastie.jpg}
+      \caption{Cryoclastie}
+    \end{figure}
+  \end{center}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=7.4cm]{Images/Diapos/Alteration/Physique/haloclastie3.jpg}
+      \caption{Haloclastie}
+    \end{figure}
+  \end{center}
+\end{frame}
+
+\subsection{Les altérations biologiques}
+\begin{frame}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=8cm]{Images/Diapos/Alteration/Biologique/biology-unit-3-cell-energy-cellular-respiration-notes-3-638.jpg}
+      \caption{Schéma de la respiration cellulaire.}
+    \end{figure}
+  \end{center}
+\end{frame}
+
+\subsection{Les altérations chimiques}
+\begin{frame}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=7cm]{Images/Diapos/Alteration/Chimiques/hydrolyse.png}
+      \caption{Hydratation de molécules de sodium et de potassium.}
+    \end{figure}
+  \end{center}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=5cm]{Images/Diapos/Alteration/Chimiques/hydrolyse.jpeg}
+    \end{figure}
+  \end{center}
+\end{frame}
+
+\section{L'érosion}
+\subsection{L'érosion éolienne}
+\begin{frame}
+  \begin{figure}[h]
+    \includegraphics[width=5cm]{Images/Diapos/Erosion/Eolienne/Vent.jpg}
+    \includegraphics[width=5cm]{Images/Diapos/Erosion/Eolienne/Vent2.jpg}
+  \end{figure}
+\end{frame}
+
+\subsection{Le ruissellement et l'érosion fluviale}
+\begin{frame}
+  \begin{figure}
+    \includegraphics[width=5cm]{Images/Diapos/Erosion/Fluviale/bad_lands.jpg}
+    \includegraphics[width=6cm]{Images/Diapos/Erosion/Fluviale/n_base.jpg}
+    \caption{Ruissellement et érosion verticale}
+  \end{figure}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=2cm]{Images/Diapos/Erosion/Fluviale/solixfluxion.jpg}
+      \caption{Solifluxion}
+    \end{figure}
+  \end{center}
+\end{frame}
+
+\subsection{L'érosion karstique}
+\begin{frame}
+  \begin{center}
+    \begin{figure}[h]
+      \includegraphics[width=5.35cm]{Images/Diapos/Erosion/Karstique/dolines.jpg}
+      \includegraphics[width=4cm]{Images/Diapos/Erosion/Karstique/erosion-karstique-fig04.jpg}
+      \caption{Dolines et grotte souterraine dus à l'érosion karstique.}
+    \end{figure}
+  \end{center}
+\end{frame}
+
+\subsection{L'érosion glaciaire}
+\begin{frame}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=8cm]{Images/Diapos/Erosion/Glaciaire/Erosion_glaciaire_Bourque4B.png}
+      \caption{Schéma de l'érosion glaciaire}
+    \end{figure}
+  \end{center}
+\end{frame}
+
+\subsection{L'érosion marine}
+\begin{frame}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=5cm]{Images/Diapos/Erosion/marine/A_vent_B_mer.jpg}
+      \caption{Grains de sable exposés (A) au vent (B) aux embruns.}
+      \includegraphics[width=4cm]{Images/Diapos/Erosion/marine/taffoni.jpg}
+      \includegraphics[width=4.5cm]{Images/Diapos/Erosion/marine/upi.jpg}
+      \caption{A gauche Taffoni et à droite encoche d'érosion marine.}
+    \end{figure}
+  \end{center}
+\end{frame}
+
 \section{Les simulations}
 \subsection{Le système cellulaire}
 \begin{frame}
