Modification du diapo 2

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -140,6 +140,12 @@
 \subsection{Les cellules}
 \begin{frame}
   Cellule : le plus petit élément incompressible de la simulation, représenté par une sphère de diamètre 1. \smallbreak
+  \begin{figure}
+    \begin{center}
+      \includegraphics[width=2cm]{Images/cellule.png}
+    \end{center}
+    \caption{Représentation de 2 cellules.}
+  \end{figure}
   Propriétés mutables :
   \begin{itemize}
    \item vélocité~;
