Réorganisation de la diapo sur le friction :
- Déplacement de la loi en début de diapo ;
- Déplacement des lettres pour plus de visibilité.

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -347,6 +347,11 @@
 
 \subsection{La friction}
 \begin{frame}
+  \begin{center}
+    $T_0 = f_0 \times N$
+  \end{center}
+  Si $T > T_0$ : glissement. Sinon friction. \smallbreak
+  Où $T = $ : force tangentielle, $N = $ : contrainte à la normale, $f_0 = $ : coefficient d'adhérence.
   \begin{figure}
     \begin{center}
       \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=0.8cm,y=1.0cm]
@@ -359,19 +364,19 @@
 	\draw (0,0)-- (0,1.41);
 	\draw (-1.06,1.41)-- (1.06,1.41);
 	\begin{scriptsize}
-	  \draw[color=qqwuqq] (0.06,0.4) node {$f_0$};
+	  \draw[color=qqwuqq] (0.1,0.4) node {$f_0$};
 	  \draw[color=black] (0.21,0.79) node {$N$};
-	  \draw[color=black] (0.03,1.33) node {$T$};
+	  \draw[color=black] (0.1,1.55) node {$T$};
 	\end{scriptsize}
       \end{tikzpicture}
     \end{center}
     \caption{Le cône représentant la force maximale possible avant un glissement.}
   \end{figure}
-  \begin{center}
-    $T_0 = f_0 \times N$
-  \end{center}
-  Si $T > T_0$ : glissement. Sinon friction. \smallbreak
-  Où $T = $ force tangentielle appliquée à la cellule, $N = $ la pression entre les cellules et $f_0 = $ le coefficient d'adhérence.
+\end{frame}
+
+\subsection{Les limites matérielles}
+\begin{frame}
+  
 \end{frame}
 
 \section{Les Améliorations possibles}
